fix interactive tool top margin caused by invisible header

--- a/app/src/views/App/App.module.css
+++ b/app/src/views/App/App.module.css
@@ -23,7 +23,7 @@ body {
 }
 
 .header {
-  height: 64px;
+  height: 56px;
 }
 
 .main1 {
